--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.9.1
 Bootstrap-Flask==2.2.0
 click==8.1.3
+decorator==5.1.1
 dnspython==2.2.1
 dominate==2.7.0
 email-validator==1.3.0
@@ -11,8 +12,11 @@ Flask-SQLAlchemy==3.0.2
 Flask-WTF==1.0.1
 greenlet==2.0.1
 idna==3.4
+infinity==1.5
+intervals==0.9.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
+login==0.0.6
 Mako==1.2.4
 MarkupSafe==2.1.1
 numpy==1.23.5
@@ -20,7 +24,10 @@ opencv-python==4.6.0.66
 Pillow==9.3.0
 python-dotenv==0.21.0
 qrcode==7.3.1
+six==1.16.0
 SQLAlchemy==1.4.45
+validators==0.20.0
 visitor==0.1.3
 Werkzeug==2.2.2
 WTForms==3.0.1
+WTForms-Components==0.10.5
