--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 alembic==1.9.1
+blinker==1.5
 Bootstrap-Flask==2.2.0
+cffi==1.15.1
 click==8.1.3
+cryptography==39.0.0
 decorator==5.1.1
 dnspython==2.2.1
 dominate==2.7.0
 email-validator==1.3.0
+Faker==15.3.4
 Flask==2.2.2
 Flask-Login==0.6.2
+Flask-Mail==0.9.1
 Flask-Migrate==4.0.0
 Flask-SQLAlchemy==3.0.2
 Flask-WTF==1.0.1
@@ -21,13 +26,19 @@ Mako==1.2.4
 MarkupSafe==2.1.1
 numpy==1.23.5
 opencv-python==4.6.0.66
+phonenumbers==8.13.3
 Pillow==9.3.0
+pycparser==2.21
+PyJWT==1.7.1
+python-dateutil==2.8.2
 python-dotenv==0.21.0
 qrcode==7.3.1
 six==1.16.0
 SQLAlchemy==1.4.45
+SQLAlchemy-Utils==0.39.0
 validators==0.20.0
 visitor==0.1.3
 Werkzeug==2.2.2
 WTForms==3.0.1
+WTForms-Alchemy==0.18.0
 WTForms-Components==0.10.5
