--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.9.1
+attrs==22.2.0
 blinker==1.5
 Bootstrap-Flask==2.2.0
 cffi==1.15.1
@@ -9,6 +10,11 @@ dnspython==2.2.1
 dominate==2.7.0
 email-validator==1.3.0
 Faker==15.3.4
+flake8==6.0.0
+flake8-bugbear==22.12.6
+flake8-builtins==2.1.0
+flake8-commas==2.1.0
+flake8-import-order==0.18.2
 Flask==2.2.2
 Flask-Login==0.6.2
 Flask-Mail==0.9.1
@@ -24,11 +30,15 @@ Jinja2==3.1.2
 login==0.0.6
 Mako==1.2.4
 MarkupSafe==2.1.1
+mccabe==0.7.0
 numpy==1.23.5
 opencv-python==4.6.0.66
+pep8-naming==0.13.3
 phonenumbers==8.13.3
 Pillow==9.3.0
+pycodestyle==2.10.0
 pycparser==2.21
+pyflakes==3.0.1
 PyJWT==1.7.1
 python-dateutil==2.8.2
 python-dotenv==0.21.0
