--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@ blinker==1.5
 Bootstrap-Flask==2.2.0
 cffi==1.15.1
 click==8.1.3
+coverage==7.0.4
 cryptography==39.0.0
 decorator==5.1.1
 dnspython==2.2.1
 dominate==2.7.0
 email-validator==1.3.0
+exceptiongroup==1.1.0
 Faker==15.3.4
 flake8==6.0.0
 flake8-bugbear==22.12.6
@@ -24,6 +26,7 @@ Flask-WTF==1.0.1
 greenlet==2.0.1
 idna==3.4
 infinity==1.5
+iniconfig==2.0.0
 intervals==0.9.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -33,19 +36,24 @@ MarkupSafe==2.1.1
 mccabe==0.7.0
 numpy==1.23.5
 opencv-python==4.6.0.66
+packaging==22.0
 pep8-naming==0.13.3
 phonenumbers==8.13.3
 Pillow==9.3.0
+pluggy==1.0.0
 pycodestyle==2.10.0
 pycparser==2.21
 pyflakes==3.0.1
 PyJWT==1.7.1
+pytest==7.2.0
+pytest-cov==4.0.0
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 qrcode==7.3.1
 six==1.16.0
 SQLAlchemy==1.4.45
 SQLAlchemy-Utils==0.39.0
+tomli==2.0.1
 validators==0.20.0
 visitor==0.1.3
 Werkzeug==2.2.2
